fix(ui): resolve layout overlapping issues

--- a/src/2_pages/artist-page/ui/ArtistPage.module.scss
+++ b/src/2_pages/artist-page/ui/ArtistPage.module.scss
@@ -8,7 +8,6 @@
     padding: 2.5rem 2rem;
     overflow: hidden;
     position: relative;
-    z-index: 1;
     display: flex;
     flex-direction: column;
     justify-content: center;
